Updated center image issues, no overflow in mobile now

--- a/css/style.css
+++ b/css/style.css
@@ -96,8 +96,8 @@ margin-bottom:50px;
   display: block;
   margin-left: auto;
   margin-right: auto;
-  width: 800px;
-  height: 100%;
+  width: 50%;
+  height: auto;
 }
 
 /************ NAVIGATION ************/
